tools/tests/errors/surf_arity_10.experr
function takes 2 positional argument(s) but 4 were given
